register modal set

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
    <header>
       <!-- navigation -->
-      <nav class="navbar navbar-expand-lg bg-light">
+      <nav class="navbar navbar-expand-lg bg-light shadow-lg mb-3">
          <div class="container">
             <a class="navbar-brand" href="#">Learn Yourself</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
@@ -27,19 +27,19 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                <ul class="navbar-nav mx-auto mb-2 mb-lg-0">
                   <li class="nav-item">
-                     <a class="nav-link h4 active" aria-current="page" href="#">Home</a>
+                     <a class="nav-link  active" aria-current="page" href="#">Home</a>
                   </li>
                   <li class="nav-item">
-                     <a class="nav-link h4" aria-current="page" href="#">Courses</a>
+                     <a class="nav-link " aria-current="page" href="#">Courses</a>
                   </li>
                   <li class="nav-item">
-                     <a class="nav-link h4" aria-current="page" href="#">Deals</a>
+                     <a class="nav-link " aria-current="page" href="#">Deals</a>
                   </li>
                   <li class="nav-item">
-                     <a class="nav-link h4" aria-current="page" href="#">Blog</a>
+                     <a class="nav-link " aria-current="page" href="#">Blog</a>
                   </li>
                   <li class="nav-item">
-                     <a class="nav-link h4" aria-current="page" href="#">Contact Us</a>
+                     <a class="nav-link " aria-current="page" href="#">Contact Us</a>
                   </li>
                </ul>
             </div>
@@ -53,29 +53,27 @@
                   aria-current="true" aria-label="Slide 1"></button>
                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1"
                   aria-label="Slide 2"></button>
-               <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2"
-                  aria-label="Slide 3"></button>
+
             </div>
             <div class="carousel-inner">
                <div class="carousel-item active">
-                  <img src="..." class="d-block w-100" alt="...">
-                  <div class="carousel-caption d-none d-md-block">
-                     <h5>First slide label</h5>
-                     <p>Some representative placeholder content for the first slide.</p>
+                  <img src="./images/cover/cover-1.png" class="d-block w-100" alt="...">
+                  <div class="carousel-caption">
+                     <h1 class="fs-1 d-none d-md-block">Get Started Digital <br>
+                        Learning</h1>
+                     <p>It is a long established fact that a reader will be distracted by the readable
+                        content of a page when looking at its layout</p>
+                     <div class="btn btn-info btn-lg d-none d-md-block w-50 mx-auto">Get Started</div>
                   </div>
                </div>
                <div class="carousel-item">
-                  <img src="..." class="d-block w-100" alt="...">
-                  <div class="carousel-caption d-none d-md-block">
-                     <h5>Second slide label</h5>
-                     <p>Some representative placeholder content for the second slide.</p>
-                  </div>
-               </div>
-               <div class="carousel-item">
-                  <img src="..." class="d-block w-100" alt="...">
-                  <div class="carousel-caption d-none d-md-block">
-                     <h5>Third slide label</h5>
-                     <p>Some representative placeholder content for the third slide.</p>
+                  <img src="./images/cover/cover-3.jpg" class="d-block w-100" alt="...">
+                  <div class="carousel-caption ">
+                     <h1 class="fs-1 d-none d-md-block">Get Started Digital <br>
+                        Learning</h1>
+                     <p>It is a long established fact that a reader will be distracted by the readable
+                        content of a page when looking at its layout</p>
+                     <div class="btn btn-info btn-lg d-none d-md-block w-50 mx-auto">Get Started</div>
                   </div>
                </div>
             </div>
@@ -92,6 +90,173 @@
          </div>
       </div>
    </header>
+   <!-- main section -->
+   <section class="container">
+      <div class="row">
+         <div class="col-12 my-5">
+            <h1 class="fs-1 text-center">Discover Our Popular <br>
+               Courses</h1>
+            <p class="fs-5 text-center mt-3">It is a long established fact that a reader will be distracted by the
+               readable
+               <br>
+               content of a page when looking at its layout
+            </p>
+         </div>
+         <div class="col-lg-6">
+            <div class="card mb-3" style="max-width: 540px;">
+               <div class="row g-0">
+                  <div class="col-md-4">
+                     <img src="./images/course/course-1.png" class="img-fluid rounded-start h-100 w-100" alt="...">
+                  </div>
+                  <div class="col-md-8">
+                     <div class="card-body">
+                        <h5 class="card-title fs-5 fw-bolder">Fundamental Of UI/UX Design</h5>
+                        <p class="card-text">Learn User Interface online at your own pace. Start today and improve your
+                           skills. Join millions of learners from around
+                           the world already learning on <b>"Learn Yourself"</b> </p>
+                        <p class="card-text text-info"><b>Price: $20</b></p>
+                     </div>
+                  </div>
+               </div>
+            </div>
+         </div>
+         <div class="col-lg-6">
+            <div class="card mb-3" style="max-width: 540px;">
+               <div class="row g-0">
+                  <div class="col-md-4">
+                     <img src="./images/course/course-2.png" class="img-fluid rounded-start h-100 w-100" alt="...">
+                  </div>
+                  <div class="col-md-8">
+                     <div class="card-body">
+                        <h5 class="card-title fs-5 fw-bolder">Javascript Basic to advanced</h5>
+                        <p class="card-text">Learn JavaScript with this complete course on the market. From beginner to
+                           advanced. Join millions of learners from
+                           around the world already learning on <b>"Learn Yourself"</b> </p>
+                        <p class="card-text text-info"><b>Price: $15</b></p>
+                     </div>
+                  </div>
+               </div>
+            </div>
+         </div>
+         <div class="col-lg-6">
+            <div class="card mb-3" style="max-width: 540px;">
+               <div class="row g-0">
+                  <div class="col-md-4">
+                     <img src="./images/course/course-3.png" class="img-fluid rounded-start h-100 w-100" alt="...">
+                  </div>
+                  <div class="col-md-8">
+                     <div class="card-body">
+                        <h5 class="card-title fs-5 fw-bolder">Fullstack Web Development</h5>
+                        <p class="card-text">Master your language with lessons, quizzes, and projects designed for
+                           real-life scenarios. Learn key takeaway skills of
+                           full stack on <b>"Learn Yourself"</b> </p>
+                        <p class="card-text text-info"><b>Price: $25</b></p>
+                     </div>
+                  </div>
+               </div>
+            </div>
+         </div>
+         <div class="col-lg-6">
+            <div class="card mb-3" style="max-width: 540px;">
+               <div class="row g-0">
+                  <div class="col-md-4">
+                     <img src="./images/course/course-4.png" class="img-fluid rounded-start h-100 w-100" alt="...">
+                  </div>
+                  <div class="col-md-8">
+                     <div class="card-body">
+                        <h5 class="card-title fs-5 fw-bolder">Digital Marketing</h5>
+                        <p class="card-text">Learn Digital Marketing strategy with social media, analytics, YouTube,
+                           email & more. Learn to confidently implement
+                           strategies across major online on <b>"Learn Yourself"</b> </p>
+                        <p class="card-text text-info"><b>Price: $10</b></p>
+                     </div>
+                  </div>
+               </div>
+            </div>
+         </div>
+         <div class="col-lg-6">
+            <div class="card mb-3" style="max-width: 540px;">
+               <div class="row g-0">
+                  <div class="col-md-4">
+                     <img src="./images/course/course-5.png" class="img-fluid rounded-start h-100 w-100" alt="...">
+                  </div>
+                  <div class="col-md-8">
+                     <div class="card-body">
+                        <h5 class="card-title fs-5 fw-bolder">Photography Basic Rules</h5>
+                        <p class="card-text">Learn the exposure triangle (aperture, shutter speed, ISO) and basic
+                           composition rules in this easy photography course on <b>"Learn Yourself"</b> </p>
+                        <p class="card-text text-info"><b>Price: $12</b></p>
+                     </div>
+                  </div>
+               </div>
+            </div>
+         </div>
+         <div class="col-lg-6">
+            <div class="card mb-3" style="max-width: 540px;">
+               <div class="row g-0">
+                  <div class="col-md-4">
+                     <img src="./images/course/course-6.png" class="img-fluid rounded-start h-100 w-100" alt="...">
+                  </div>
+                  <div class="col-md-8">
+                     <div class="card-body">
+                        <h5 class="card-title fs-5 fw-bolder">Motion Graphics</h5>
+                        <p class="card-text">Learn Motion Graphics online at your own pace. Start today and improve your
+                           skills. Join millions of learners from
+                           around the world already learning on <b>"Learn Yourself"</b> </p>
+                        <p class="card-text text-info"><b>Price: $18</b></p>
+                     </div>
+                  </div>
+               </div>
+            </div>
+         </div>
+         <div class="col-12 text-center my-3">
+            <button class="btn btn-primary btn-lg text-white fw-bold">See More Courses</button>
+         </div>
+      </div>
+      <!-- subscription area -->
+      <div class="row my-5">
+         <div class="col-12 d-flex justify-content-between align-items-center bg-primary rounded p-4">
+            <div class="w-50">
+               <h1 class="fs-2 fw-bold mb-3 text-white">Ready to join?</h1>
+               <p class="text-white">It is a long established fact that a reader will be distracted by the
+                  readable content of a page when looking at its layout.</p>
+            </div>
+            <div>
+               <button type="button" class=" btn bg-light btn-lg fw-bold text-primary" data-bs-toggle="modal"
+                  data-bs-target="#exampleModal">Register Now</button>
+            </div>
+            <!-- Modal -->
+            <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel"
+               aria-hidden="true">
+               <div class="modal-dialog">
+                  <div class="modal-content">
+                     <div class="modal-header">
+                        <h5 class="modal-title" id="exampleModalLabel">Register</h5>
+                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                     </div>
+                     <div class="modal-body">
+                        <div class="form-floating mb-3">
+                           <input type="email" class="form-control" id="floatingInput" placeholder="name@example.com">
+                           <label for="floatingInput">Email address</label>
+                        </div>
+                        <div class="form-floating">
+                           <input type="password" class="form-control" id="floatingPassword" placeholder="Password">
+                           <label for="floatingPassword">Password</label>
+                        </div>
+                        <div class="text-center mt-3">
+                           <button type="button" class=" btn bg-light btn-lg fw-bold text-primary border">Register
+                              Now</button>
+                        </div>
+                     </div>
+                  </div>
+               </div>
+            </div>
+         </div>
+      </div>
+
+      <!-- Frequently asked -->
+
+   </section>
 
    <!-- bootstrap js -->
    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
