--- a/index.html
+++ b/index.html
@@ -255,7 +255,87 @@
       </div>
 
       <!-- Frequently asked -->
-
+      <div class="row my-5">
+         <div class="col-12">
+            <div>
+               <h1 class="fs-1 text-center">Frequently Asked Questions</h1>
+               <p class="fs-5 text-center mt-3">It is a long established fact that a reader will be distracted by the
+                  readable <br>
+                  content of a page when looking at its layout.
+               </p>
+            </div>
+            <div class="accordion accordion-flush mt-5" id="accordionFlushExample">
+               <div class="accordion-item">
+                  <h2 class="accordion-header" id="flush-headingOne">
+                     <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                        data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
+                        What is different between Flex box vs Grid?
+                     </button>
+                  </h2>
+                  <div id="flush-collapseOne" class="accordion-collapse collapse" aria-labelledby="flush-headingOne"
+                     data-bs-parent="#accordionFlushExample">
+                     <div class="accordion-body">The basic difference between CSS Grid Layout and CSS Flexbox Layout is
+                        that flexbox was designed for layout in one
+                        dimension - either a row or a column. Grid was designed for two-dimensional layout - rows, and
+                        columns at the same time.
+                        The two specifications share some common features, however, and if you have already learned how
+                        to use flexbox, the
+                        similarities should help you get to grips with Grid.
+                     </div>
+                  </div>
+               </div>
+               <div class="accordion-item">
+                  <h2 class="accordion-header" id="flush-headingTwo">
+                     <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                        data-bs-target="#flush-collapseTwo" aria-expanded="false" aria-controls="flush-collapseTwo">
+                        What is different between Bootstrap vs Tailwind CSS?
+                     </button>
+                  </h2>
+                  <div id="flush-collapseTwo" class="accordion-collapse collapse" aria-labelledby="flush-headingTwo"
+                     data-bs-parent="#accordionFlushExample">
+                     <div class="accordion-body">Bootstrap is much larger than Tailwind and requires multiple files to
+                        access its full functionality. Because of this,
+                        using Bootstrap means a significantly larger file size than Tailwind. Bootstrap also offers
+                        mobile-first, responsive
+                        components pre-styled to create flawless website pages quickly
+                     </div>
+                  </div>
+               </div>
+               <div class="accordion-item">
+                  <h2 class="accordion-header" id="flush-headingThree">
+                     <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                        data-bs-target="#flush-collapseThree" aria-expanded="false" aria-controls="flush-collapseThree">
+                        What is css box model?
+                     </button>
+                  </h2>
+                  <div id="flush-collapseThree" class="accordion-collapse collapse" aria-labelledby="flush-headingThree"
+                     data-bs-parent="#accordionFlushExample">
+                     <div class="accordion-body">In web development, the CSS box model refers to how HTML elements are
+                        modeled in browser engines and how the dimensions
+                        of those HTML elements are derived from CSS properties. It is a fundamental concept for the
+                        composition of HTML
+                        webpages.
+                     </div>
+                  </div>
+               </div>
+               <div class="accordion-item">
+                  <h2 class="accordion-header" id="flush-headingFour">
+                     <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                        data-bs-target="#flush-collapseFour" aria-expanded="false" aria-controls="flush-collapseFour">
+                        What is symentic tags?
+                     </button>
+                  </h2>
+                  <div id="flush-collapseFour" class="accordion-collapse collapse" aria-labelledby="flush-headingFour"
+                     data-bs-parent="#accordionFlushExample">
+                     <div class="accordion-body">The HTML semantics refers to the tags that provide meaning to an HTML
+                        page rather than just presentation. It makes HTML
+                        more comprehensible by better defining the different sections and layout of web pages
+                     </div>
+                  </div>
+               </div>
+            </div>
+         </div>
+      </div>
    </section>
 
    <!-- bootstrap js -->
