--- a/index.html
+++ b/index.html
@@ -336,6 +336,31 @@
             </div>
          </div>
       </div>
+
+      <!-- Trusted section -->
+      <div class="row my-5">
+         <div class="col-12 my-5">
+            <h1 class="fs-1 text-center fw-bold">Trusted by over 800+ companies</h1>
+         </div>
+         <div class="col-2">
+            <img src="./images/company/company-1.png" class="w-100 h-100" alt="">
+         </div>
+         <div class="col-2">
+            <img src="./images/company/company-2.png" class="w-100 h-100" alt="">
+         </div>
+         <div class="col-2">
+            <img src="./images/company/company-3.png" class="w-100 h-100" alt="">
+         </div>
+         <div class="col-2">
+            <img src="./images/company/company-4.png" class="w-100 h-100" alt="">
+         </div>
+         <div class="col-2">
+            <img src="./images/company/company-5.png" class="w-100 h-100" alt="">
+         </div>
+         <div class="col-2">
+            <img src="./images/company/company-6.png" class="w-100 h-100" alt="">
+         </div>
+      </div>
    </section>
 
    <!-- bootstrap js -->
