--- a/index.html
+++ b/index.html
@@ -6,9 +6,16 @@
    <meta http-equiv="X-UA-Compatible" content="IE=edge">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <title>Learn Yourself</title>
+
    <!-- bootstrap css -->
    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
       integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
+
+   <!-- Font awesome -->
+   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css"
+      integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A=="
+      crossorigin="anonymous" referrerpolicy="no-referrer" />
+
    <!-- custom css -->
    <link rel="stylesheet" href="css/style.css">
 </head>
@@ -338,7 +345,7 @@
       </div>
 
       <!-- Trusted section -->
-      <div class="row my-5">
+      <div class="row my-5 d-none d-lg-flex">
          <div class="col-12 my-5">
             <h1 class="fs-1 text-center fw-bold">Trusted by over 800+ companies</h1>
          </div>
@@ -362,6 +369,22 @@
          </div>
       </div>
    </section>
+   <footer>
+      <div class="row bg-dark">
+         <div class="col-12 d-flex flex-column justify-content-center align-items-center p-5">
+            <h1 class="fs-3 text-white fw-bold">Learn Yourself</h1>
+            <p class=" text-white text-center">Office 41, Zawaya Buildin,<br> Ghala Muscat, Sultanate of Oman</p>
+            <p><a class="text-decoration-none text-white" href="">Privacy Ploicy</a> | <a
+                  class="text-decoration-none text-white" href="">Terms of use</a></p>
+            <div>
+               <a class="text-decoration-none fs-3 pe-3 text-white" href=""><i class="fa-brands fa-facebook"></i></a>
+               <a class="text-decoration-none fs-3 pe-3 text-white" href=""><i class="fa-brands fa-twitter"></i></a>
+               <a class="text-decoration-none fs-3 pe-3 text-white" href=""><i class="fa-brands fa-linkedin"></i></a>
+               <a class="text-decoration-none fs-3 pe-3 text-white" href=""><i class="fa-brands fa-tiktok"></i></a>
+            </div>
+         </div>
+      </div>
+   </footer>
 
    <!-- bootstrap js -->
    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
